// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-remediation-form Renders \`storage-settings-remediation-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Instructions
    </div>
    <!---->
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        history="1611220000"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Delete instructions timeline"
    name="remediation.delete_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete instruction statistics"
    name="remediation.delete_stats_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete instructions summary"
    name="remediation.delete_mod_stats_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
</div>
`;

exports[`storage-settings-remediation-form Renders \`storage-settings-remediation-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Instructions
    </div>
    <!---->
  </div>
  <!---->
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Delete instructions timeline"
    name="remediation.delete_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete instruction statistics"
    name="remediation.delete_stats_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete instructions summary"
    name="remediation.delete_mod_stats_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
</div>
`;
